--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="back_fon">#f7fcc2</color>
+    <color name="red">#db1626</color>
+    <color name="yellow">#e7ed3e</color>
+    <color name="blue">#2737c4</color>
+    <color name="red_Lat">#b0051c</color>
 </resources>
