--- a/app/src/main/res/layout/activity_homework6.xml
+++ b/app/src/main/res/layout/activity_homework6.xml
@@ -90,6 +90,33 @@
         android:layout_marginEnd="100dp"
         android:background="@color/red_Lat"/>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_marginStart="50dp"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:background="@color/blue"/>
+
+        <TextView
+            android:layout_marginTop="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:background="@color/blue"
+
+
+
+
+    </FrameLayout>
+
+
 
     </LinearLayout>
 
