--- a/app/src/main/res/layout/activity_homework6.xml
+++ b/app/src/main/res/layout/activity_homework6.xml
@@ -109,10 +109,7 @@
             android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:background="@color/blue"
-
-
-
+            android:background="@color/blue"/>
 
     </FrameLayout>
 
