--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="yellow">#e7ed3e</color>
     <color name="blue">#2737c4</color>
     <color name="red_Lat">#b0051c</color>
+    <color name="color_timer">#b09751</color>
 </resources>
