--- a/app/src/main/res/layout/activity_timer_info.xml
+++ b/app/src/main/res/layout/activity_timer_info.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:layout_width="236dp"
         android:layout_height="64dp"
@@ -15,22 +16,48 @@
         android:textColor="@color/color_timer"
         android:textSize="17sp" />
 
-    <TextView
-        android:id="@+id/info_log"
-        android:layout_width="235dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="220dp"
-        android:textColor="@color/color_timer"/>
+    <LinearLayout
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="210dp"
+        android:orientation="horizontal">
 
-    <TextView
+
+        <TextView
+            android:id="@+id/login_view"
+            android:layout_width="46dp"
+            android:layout_height="20dp"
+            android:text="@string/login"
+            android:textColor="@color/color_timer" />
+
+        <TextView
+            android:id="@+id/info_log"
+            android:layout_width="233dp"
+            android:layout_height="20dp"
+            android:textColor="@color/color_timer" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="260dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/pass_view"
+            android:layout_width="75dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="40dp"
+            android:text="@string/password"
+            android:textColor="@color/color_timer" />
+
+        <TextView
         android:id="@+id/info_pass"
-        android:layout_width="236dp"
+        android:layout_marginTop="40dp"
+        android:layout_width="204dp"
         android:layout_height="20dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="250dp"
-        android:textColor="@color/color_timer"/>
-
-
+        android:textColor="@color/color_timer" />
+    </LinearLayout>
 
 </FrameLayout>
