--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -5,34 +5,34 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/timer_show"
+        android:id="@+id/timerShow"
         android:layout_width="85dp"
         android:layout_height="51dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:background="@color/color_timer"
         android:paddingStart="35dp"
         android:paddingTop="15dp"
         android:text="10" />
 
     <Button
-        android:id="@+id/timer_button"
+        android:id="@+id/button"
         android:layout_width="234dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
         android:layout_marginStart="89dp"
-        android:text="@string/click"
-        android:backgroundTint="@color/color_timer"/>
+        android:layout_marginTop="250dp"
+        android:backgroundTint="@color/color_timer"
+        android:text="@string/click" />
 
     <LinearLayout
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:layout_marginStart="89dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="150dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/log_view"
+            android:id="@+id/logView"
             android:layout_width="100dp"
             android:textColor="@color/color_timer"
             android:layout_height="20dp"
@@ -40,7 +40,8 @@
             android:visibility="invisible"/>
 
         <EditText
-            android:id="@+id/first_edit"
+            android:id="@+id/firstEdit"
+            android:textColorHint="@color/white"
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:textColor="@color/black"
@@ -53,11 +54,11 @@
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:layout_marginStart="89dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="200dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/pass_view"
+            android:id="@+id/passView"
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:textColor="@color/color_timer"
@@ -65,7 +66,7 @@
             android:visibility="invisible"/>
 
         <EditText
-            android:id="@+id/second_edit"
+            android:id="@+id/secondEdit"
             android:layout_width="100dp"
             android:layout_height="20dp"
             android:textColor="@color/black"
