--- a/app/src/main/res/layout/activity_timer_info.xml
+++ b/app/src/main/res/layout/activity_timer_info.xml
@@ -1,63 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".homework7.Information"
+    android:background = "@color/black">
+
 
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="236dp"
         android:layout_height="64dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
         android:paddingStart="25dp"
         android:paddingTop="20dp"
         android:text="@string/info"
         android:textColor="@color/color_timer"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="110dp" />
 
-    <LinearLayout
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="210dp"
-        android:orientation="horizontal">
-
-
-        <TextView
-            android:id="@+id/login_view"
-            android:layout_width="46dp"
-            android:layout_height="20dp"
-            android:text="@string/login"
-            android:textColor="@color/color_timer" />
-
-        <TextView
-            android:id="@+id/info_log"
-            android:layout_width="233dp"
-            android:layout_height="20dp"
-            android:textColor="@color/color_timer" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="260dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/pass_view"
-            android:layout_width="75dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="40dp"
-            android:text="@string/password"
-            android:textColor="@color/color_timer" />
-
-        <TextView
-        android:id="@+id/info_pass"
-        android:layout_marginTop="40dp"
-        android:layout_width="204dp"
+    <TextView
+        android:id="@+id/loginView"
+        android:layout_width="46dp"
         android:layout_height="20dp"
-        android:textColor="@color/color_timer" />
-    </LinearLayout>
+        android:text="@string/login"
+        android:textColor="@color/color_timer"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        tools:layout_editor_absoluteY="198dp"
+        tools:ignore="MissingConstraints" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/passView"
+        android:layout_width="78dp"
+        android:layout_height="17dp"
+        android:text="@string/password"
+        android:textColor="@color/color_timer"
+        app:layout_constraintStart_toStartOf="@+id/loginView"
+        tools:layout_editor_absoluteY="238dp"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/infoPass"
+        android:layout_width="158dp"
+        android:layout_height="17dp"
+        android:textColor="@color/color_timer"
+        app:layout_constraintEnd_toEndOf="@+id/infoLog"
+        tools:layout_editor_absoluteY="238dp"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/infoLog"
+        android:layout_width="192dp"
+        android:layout_height="20dp"
+        android:textColor="@color/color_timer"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        tools:layout_editor_absoluteY="198dp"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="110dp"
+        android:layout_height="80dp"
+        android:src="@drawable/ic_android_black_24dp"
+        app:srcCompat="@drawable/ic_launcher_foreground"
+        tools:layout_editor_absoluteX="113dp"
+        tools:layout_editor_absoluteY="110dp"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/close"
+        android:backgroundTint="@color/color_timer"
+        tools:layout_editor_absoluteX="323dp"
+        tools:layout_editor_absoluteY="294dp"
+        tools:ignore="MissingConstraints" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
