--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -1,79 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background = "@color/black">
+
 
     <TextView
         android:id="@+id/timerShow"
         android:layout_width="85dp"
         android:layout_height="51dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="150dp"
         android:background="@color/color_timer"
         android:paddingStart="35dp"
         android:paddingTop="15dp"
-        android:text="10" />
+        android:textColorHint="@color/white"
+        android:text="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.222" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
         android:layout_width="234dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="250dp"
         android:backgroundTint="@color/color_timer"
-        android:text="@string/click" />
-
-    <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="150dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/logView"
-            android:layout_width="100dp"
-            android:textColor="@color/color_timer"
-            android:layout_height="20dp"
-            android:text="@string/login"
-            android:visibility="invisible"/>
-
-        <EditText
-            android:id="@+id/firstEdit"
-            android:textColorHint="@color/white"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:textColor="@color/black"
-            android:layout_marginTop="14dp"
-            android:visibility="invisible" />
-
-    </LinearLayout>
-    <LinearLayout
-
-        android:layout_width="200dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="200dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/passView"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:textColor="@color/color_timer"
-            android:text="@string/password"
-            android:visibility="invisible"/>
-
-        <EditText
-            android:id="@+id/secondEdit"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:textColor="@color/black"
-            android:layout_marginTop="14dp"
-            android:visibility="invisible" />
-
-    </LinearLayout>
+        android:text="@string/click"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timerShow"
+        app:layout_constraintVertical_bias="0.496" />
 
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/logView"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:text="@string/login"
+        android:textColor="@color/color_timer"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.282"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timerShow"
+        app:layout_constraintVertical_bias="0.31" />
+
+    <EditText
+        android:id="@+id/firstEdit"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/white"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.162"
+        app:layout_constraintStart_toEndOf="@+id/logView"
+        app:layout_constraintTop_toBottomOf="@+id/timerShow"
+        app:layout_constraintVertical_bias="0.31" />
+
+    <TextView
+        android:id="@+id/passView"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:text="@string/password"
+        android:textColor="@color/color_timer"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.282"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logView"
+        app:layout_constraintVertical_bias="0.496" />
+
+    <EditText
+        android:id="@+id/secondEdit"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:textColor="@color/black"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.168"
+        app:layout_constraintStart_toEndOf="@+id/passView"
+        app:layout_constraintTop_toBottomOf="@+id/firstEdit"
+        app:layout_constraintVertical_bias="0.496" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
