--- a/app/src/main/res/layout/activity_timer_info.xml
+++ b/app/src/main/res/layout/activity_timer_info.xml
@@ -8,6 +8,15 @@
     android:background = "@color/black">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="110dp"
+        android:layout_height="80dp"
+        android:src="@drawable/ic_android_black_24dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -18,67 +27,72 @@
         android:text="@string/info"
         android:textColor="@color/color_timer"
         android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="110dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.194" />
+
 
     <TextView
         android:id="@+id/loginView"
-        android:layout_width="46dp"
+        android:layout_width="78dp"
         android:layout_height="20dp"
         android:text="@string/login"
         android:textColor="@color/color_timer"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        tools:layout_editor_absoluteY="198dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/infoLog"
+        app:layout_constraintHorizontal_bias="0.792"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.291" />
 
     <TextView
         android:id="@+id/passView"
         android:layout_width="78dp"
-        android:layout_height="17dp"
+        android:layout_height="20dp"
         android:text="@string/password"
         android:textColor="@color/color_timer"
-        app:layout_constraintStart_toStartOf="@+id/loginView"
-        tools:layout_editor_absoluteY="238dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/infoPass"
+        app:layout_constraintHorizontal_bias="0.795"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginView" />
 
     <TextView
         android:id="@+id/infoPass"
-        android:layout_width="158dp"
-        android:layout_height="17dp"
+        android:layout_width="192dp"
+        android:layout_height="20dp"
         android:textColor="@color/color_timer"
-        app:layout_constraintEnd_toEndOf="@+id/infoLog"
-        tools:layout_editor_absoluteY="238dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.757"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoLog" />
 
     <TextView
         android:id="@+id/infoLog"
         android:layout_width="192dp"
         android:layout_height="20dp"
         android:textColor="@color/color_timer"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        tools:layout_editor_absoluteY="198dp"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="110dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_android_black_24dp"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="110dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.757"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.291" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/close"
         android:backgroundTint="@color/color_timer"
-        tools:layout_editor_absoluteX="323dp"
-        tools:layout_editor_absoluteY="294dp"
-        tools:ignore="MissingConstraints" />
+        android:text="@string/close"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.498" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
