--- a/app/src/main/res/layout/activity_timer_info.xml
+++ b/app/src/main/res/layout/activity_timer_info.xml
@@ -32,7 +32,8 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.194" />
+        app:layout_constraintVertical_bias="0.194"
+        tools:ignore="RtlSymmetry" />
 
 
     <TextView
