--- a/app/src/main/res/layout/item_candies.xml
+++ b/app/src/main/res/layout/item_candies.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tv_candies"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -15,10 +15,9 @@
 
     <TextView
         android:id="@+id/tv_code"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_candies" />
 
