--- a/app/src/main/res/layout/item_candies.xml
+++ b/app/src/main/res/layout/item_candies.xml
@@ -9,6 +9,9 @@
         android:id="@+id/tv_candies"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:textColor="@color/black"
+        android:paddingStart="100dp"
+        android:paddingTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,6 +20,9 @@
         android:id="@+id/tv_code"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:textColor="@color/black"
+        android:paddingStart="100dp"
+        android:paddingTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -28,9 +34,9 @@
         android:id="@+id/iv_brand"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_code"
