--- a/app/src/main/res/layout/activity_common.xml
+++ b/app/src/main/res/layout/activity_common.xml
@@ -9,9 +9,9 @@
         android:id="@+id/homework_2"
         android:layout_width="183dp"
         android:layout_height="61dp"
-        android:layout_marginTop="44dp"
-        android:text="@string/Homework2"
+        android:layout_marginTop="28dp"
         android:background="@color/purple_700"
+        android:text="@string/Homework2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +20,7 @@
         android:id="@+id/homework_4"
         android:layout_width="183dp"
         android:layout_height="61dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="216dp"
         android:background="@color/purple_700"
         android:text="@string/Homework4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:id="@+id/homework_3"
         android:layout_width="183dp"
         android:layout_height="61dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="120dp"
         android:background="@color/purple_700"
         android:text="@string/Homework3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/homework_6"
         android:layout_width="183dp"
         android:layout_height="61dp"
-        android:layout_marginTop="372dp"
+        android:layout_marginTop="312dp"
         android:background="@color/purple_700"
         android:text="@string/Homework6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/homework_7"
         android:layout_width="183dp"
         android:layout_height="61dp"
-        android:layout_marginTop="476dp"
+        android:layout_marginTop="404dp"
         android:background="@color/purple_700"
         android:text="@string/Homework7"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,9 +64,20 @@
         android:id="@+id/homework_8"
         android:layout_width="183dp"
         android:layout_height="61dp"
-        android:layout_marginTop="584dp"
+        android:layout_marginTop="504dp"
         android:background="@color/purple_700"
         android:text="@string/Homework8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/homework_9"
+        android:layout_width="183dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="600dp"
+        android:background="@color/purple_700"
+        android:text="@string/Homework9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
