--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homework9.SecondFragment">
+    tools:context=".homework9.ThirdFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/fragment_second"
+        android:id="@+id/fragment_third"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/teal_200"/>
+        android:background="@color/yellow"/>
 
 </FrameLayout>
