--- a/app/src/main/res/layout/item_candy_list.xml
+++ b/app/src/main/res/layout/item_candy_list.xml
@@ -7,7 +7,10 @@
     <TextView
         android:id="@+id/tv_codes"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:paddingStart="50dp"
+        android:textSize="25sp"
+        android:textColor="@color/teal_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
