--- a/app/src/main/res/layout/activity_common.xml
+++ b/app/src/main/res/layout/activity_common.xml
@@ -61,5 +61,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/homework_11"
+        android:layout_width="183dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="536dp"
+        android:background="@color/purple_700"
+        android:text="@string/Homework11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
